--- a/examples/callbacks4.html
+++ b/examples/callbacks4.html
@@ -11,8 +11,8 @@
 
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:300,400,700" />
 	<link rel="stylesheet" type="text/css" href="../jquery.pagepiling.css" />
-	<link rel="stylesheet" type="text/css" href="examples.css" />
-	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="stylesheet" type="text/css" href="/pagePiling.js-master/examples/examples.css" />
+	<link rel="stylesheet" type="text/css" href="/pagePiling.js-master/examples/style.css"/>
 	
 	
 	<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
@@ -576,3 +576,4 @@ a.polyline:hover svg g circle {
 
 </body>
 </html>
+
