--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@ a.polyline:hover svg g circle {
 -->
 <!--		<source src="imgs/Carol.mp4" type="video/mp4">-->
 		<video autoplay="" loop="" muted="" id="myVideo">
-				<source src="imgs/Carol.mp4" type="video/mp4">
-				<source src="imgs/moon.webm" type="video/webm">
+				<source src="https://hwangsunha.github.io/film/examples/imgs/Carol.mp4" type="video/mp4">
+				<source src="https://hwangsunha.github.io/film/examples/imgs/Carol.webm" type="video/webm">
 		</video>
 <!--
 		<div class="svg-theaters">
@@ -558,8 +558,8 @@ a.polyline:hover svg g circle {
 	    <div class="section" id="section2">
 			
 			<video autoplay muted loop id="Laurel">
-			<source src="imgs/Laurel%20.mp4" type="video/mp4">
-			<source src="imgs/laurel.webm" type="video/webm">
+			<source src="https://hwangsunha.github.io/film/examples/imgs/Laurel%20.mp4" type="video/mp4">
+			<source src="https://hwangsunha.github.io/film/examples/imgs/laurel.webm" type="video/webm">
 			
 			</video>
 	    	<div class="intro">
@@ -573,8 +573,8 @@ a.polyline:hover svg g circle {
 	    
 	    <div class="section" id="section4">
 			<video autoplay="" loop="" muted="" id="CallMeBy">
-				<source src="imgs/Call.mp4" type="video/mp4">
-				<source src="imgs/call.webm" type="video/webm">
+				<source src="https://hwangsunha.github.io/film/examples/imgs/Call.mp4" type="video/mp4">
+				<source src="https://hwangsunha.github.io/film/examples/imgs/call.webm" type="video/webm">
 				
 			</video>
 	    	<div class="intro">
