--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     	left: 140%;
 		position: relative;
     }
-	#myVideo{
+	.myVideo{
 	/*
 		position: fixed;
 		right: 0;
@@ -486,7 +486,7 @@ a.polyline:hover svg g circle {
 		</div>
 -->
 <!--		<source src="imgs/Carol.mp4" type="video/mp4">-->
-		<video autoplay="" loop="" muted="" id="myVideo">
+		<video autoplay="" loop="" muted="" class="myVideo">
 				<source src="https://hwangsunha.github.io/film/examples/imgs/Carol.mp4" type="video/mp4">
 				<source src="https://hwangsunha.github.io/film/examples/imgs/Carol.webm" type="video/webm">
 		</video>
@@ -557,7 +557,7 @@ a.polyline:hover svg g circle {
 	    </div>
 	    <div class="section" id="section2">
 			
-			<video autoplay muted loop id="Laurel">
+			<video autoplay muted loop class="myVideo">
 			<source src="https://hwangsunha.github.io/film/examples/imgs/Laurel%20.mp4" type="video/mp4">
 			<source src="https://hwangsunha.github.io/film/examples/imgs/laurel.webm" type="video/webm">
 			
@@ -572,7 +572,7 @@ a.polyline:hover svg g circle {
 	    </div>
 	    
 	    <div class="section" id="section4">
-			<video autoplay="" loop="" muted="" id="CallMeBy">
+			<video autoplay="" loop="" muted="" class="myVideo">
 				<source src="https://hwangsunha.github.io/film/examples/imgs/Call.mp4" type="video/mp4">
 				<source src="https://hwangsunha.github.io/film/examples/imgs/call.webm" type="video/webm">
 				
